# codebase-indexer

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: release.yml
plugin/: package.json
plugin/src/: index.ts  platform.ts
src/: db.rs  embeddings.rs  logic.rs  main.rs  utils.rs
tests/: repro.rs
